# open_api_demo

./: .env  .gitignore  Cargo.toml  my_database.db  run.sh
migrations/2023-05-20-060227_userPerl/: down.sql  up.sql
src/: connection.rs  lib.rs  main.rs  models.rs  schema.rs
src/pet/: api.rs
src/schema0/: object.rs
src/users0/: api.rs  controller.rs  mod.rs  model.rs
