[package]
name = "open_api_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
diesel = { version = "2.0.4", features = ["postgres"] }
serde = "1.0.163"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
