[package]
name = "open_api_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rust-s3 = "0.33.0"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
